--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,7 @@
         }
     ],
     "require": {
-        "php": ">=5.4",
-        "ext-intl": "*"
+        "php": ">=5.4"
     },
     "autoload": {
         "classmap": [
